<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:icon="@drawable/icon_location" android:id="@+id/main_menu_my_location"
		android:title="@string/main_menu_my_location" />
	<item android:icon="@drawable/icon_refresh" android:id="@+id/main_menu_map_mode"
		android:title="@string/main_menu_map_mode" />
	<item android:icon="@drawable/icon_selection" android:id="@+id/main_menu_new_game"
		android:title="@string/main_menu_new_game" />
	<item android:icon="@drawable/icon_selection" android:id="@+id/main_menu_cur_info"
		android:title="@string/main_menu_cur_info" />
	<item android:icon="@drawable/icon_search" android:id="@+id/main_menu_about"
		android:title="@string/main_menu_about" />
	<item android:id="@+id/main_menu_setup" android:title="@string/main_menu_setup"
		android:icon="@drawable/icon_setting" />
</menu>